# geode-ipc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: geode-ipc.h  geode-ipc.hpp
src/: geode-ipc.c  geode-ipc.cpp
test/: test.cpp
